--- a/submission_7/footballrefsrev.bib
+++ b/submission_7/footballrefsrev.bib
@@ -57,14 +57,14 @@ keywords = {alcohol,intimate partner violence},
 title = {{Thirty years of research show alcohol to be a cause of intimate partner violence: Future research needs to identify who to treat and how to treat them}},
 year = {2017}
 }
-@techreport{Office2019,
+@misc{Office2019,
 author = {{Home Office}},
 pages = {9},
 title = {{Home Office Counting Rules for Recorded Crime - Crime Flags}},
 url = {https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment{\_}data/file/791106/count-flags-apr-2019.pdf},
 year = {2019}
 }
-@techreport{HomeOffice2019,
+@misc{HomeOffice2019,
 author = {{Home Office}},
 institution = {Home Office},
 title = {{Crime Recording General Rules}},
@@ -236,7 +236,7 @@ year = {2018},
 month = {December},
 day = {30}
 }
-@techreport{HomeOffice2011,
+@misc{HomeOffice2011,
 author = {{Home Office}},
 institution = {Home Office},
 title = {{The National Standard for Incident Recording}},
@@ -372,4 +372,15 @@ pages = {55--73},
 title = {{Blood (Breath) Alcohol Concentration Rates of College Football Fans on Game Day}},
 volume = {55},
 year = {2011}
+}
+@article{Ostrowsky2014a,
+abstract = {To most people it seems perfectly obvious that alcohol use is one of the main reasons why sports spectators exhibit violent behavior. However, most drinking among sports spectators does not result in violent behavior. Thus, the link between alcohol use and violent behavior among sports spectators is more complex than it seems. This paper organizes and reviews the literature on alcohol use and violent behavior among sports spectators. It is quite apparent that any attempt to understand alcohol use and violent behavior among sports spectators must consider a variety of social psychological factors. This paper examines nine such factors: thrill seeking/quest for excitement, impulsivity, frustration, anger, psychopathy, the false consensus effect, the Bedouin syndrome, team identification, and alcohol expectancies. {\textcopyright} 2013 Elsevier Ltd.},
+author = {Ostrowsky, Michael K.},
+journal = {Aggression and Violent Behavior},
+keywords = {Aggression,Alcohol,Hooligan,Sports riot,Sports spectator,Violence},
+number = {4},
+pages = {303--310},
+title = {{The social psychology of alcohol use and violent behavior among sports spectators}},
+volume = {19},
+year = {2014}
 }
