--- a/submission_7/footballrefsrev.bib
+++ b/submission_7/footballrefsrev.bib
@@ -251,6 +251,17 @@ title = {{Domestic abuse in England and Wales: year ending March 2018}},
 url = {https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/domesticabuseinenglandandwales/yearendingmarch2018/pdf},
 year = {2018}
 }
+
+@misc{ONS2019,
+author = {{Office for National Statistics}},
+institution = {Office for National Statistics},
+pages = {2},
+title = {{Domestic abuse victim characteristics, England and Wales: year ending March 2019}},
+url = {https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/domesticabusevictimcharacteristicsenglandandwales/yearendingmarch2019/pdf},
+year = {2019}
+}
+
+
 @article{Kelly2008,
 abstract = {A growing body of empirical research has demonstrated that intimate partner violence is not a unitary phenomenon and that types of domestic violence can be differentiated with respect to partner dynamics, context, and con-sequences. Four patterns of violence are described: Coercive Controlling Violence, Violent Resistance, Situational Couple Violence, and Separation-Instigated Violence. The controversial matter of gender symmetry and asymmetry in intimate partner violence is discussed in terms of sampling differences and methodological limitations. Implications of differentiation among types of domestic violence include the need for improved screening measures and procedures in civil, family, and criminal court and the possibility of better decision making, appropriate sanctions, and more effective treatment programs tailored to the characteristics of different types of partner violence. In family court, reliable differentiation should provide the basis for determining what safeguards are necessary and what types of parenting plans are appropriate to ensure healthy outcomes for children and parent–child relationships.},
 author = {Kelly, Joan B. and Johnson, Michael P.},
